@@ -13524,7 +13524,8 @@ returns \kbd{NULL}, else returns its cyclic decomposition. If \var{elts} is no
 small group $G$, returns $1$ if $H$ is normal in $G$, else $0$.
 
 \fun{long}{group_isA4S4}{GEN grp} returns $1$ if the small group
-\var{grp} is isomorphic to $A_4$, $2$ if it is isomorphic to $S_4$ and
+\var{grp} is isomorphic to $A_4$, $2$ if it is isomorphic to $S_4$,
+$3$ if it is isomorphic to $(3\times 3):4$ and
 $0$ else. This is mainly to deal with the idiosyncrasy of the format.
 
 \fun{GEN}{group_leftcoset}{GEN G, GEN g} where $G$ is a small group and $g$ a
