@@ -15,7 +15,7 @@ Doc: computes the Galois group
  a number field as output by \tet{nfinit}). The extension $K/\Q$ must be
  Galois with Galois group ``weakly'' super-solvable, see below;
  returns 0 otherwise. Hence this permits to quickly check whether a polynomial
- of order strictly less than $36$ is Galois or not.
+ of order strictly less than $48$ is Galois or not.
 
  The algorithm used is an improved version of the paper
  ``An efficient algorithm for the computation of Galois automorphisms'',
@@ -32,8 +32,7 @@ Doc: computes the Galois group
  $G/H_n$ is isomorphic to either $A_4$ or $S_4$.
 
  In practice, almost all small groups are WKSS, the exceptions having order
- 36(1 exception), 48(2), 56(1), 60(1), 72(5), 75(1), 80(1), 96(10) and $\geq
- 108$.
+ 48(2), 56(1), 60(1), 72(3), 75(1), 80(1), 96(10), 112(1), 120(3) and $\geq 144$.
 
  This function is a prerequisite for most of the \kbd{galois}$xxx$ routines.
  For instance:
@@ -82,6 +81,9 @@ Doc: computes the Galois group
 
  \quad\item if $G/H_n\simeq S_4$ then $[o_1,\ldots,o_g]$ ends by
  $[2,2,3,2]$.
+
+ \quad\item if $G/H_n\simeq (3\times 3):4 (GAP4(36,9))$ then
+ $[o_1,\ldots,o_g]$ ends by $[3,3,4]$.
 
  \quad\item for $1\leq i \leq g$ the subgroup of $G$ generated by
  $[s_1,\ldots,s_i]$ is normal, with the exception of $i=g-2$ in the
