@@ -9,6 +9,7 @@
 [4, 2]
 [12, 3]
 [24, 12]
+[36, 9]
 [54, 11]
 [54, 14]
 [64, 66]
@@ -143,4 +144,4 @@ x^2 - x - 16
 2 + z*x + 1/3*z^2, x^2 + 1/3*z^2]], [z^6 + 108, Mod(x, x^6 + 108), [x - z, x
  + (-1/12*z^4 + 1/2*z), x + (1/12*z^4 + 1/2*z), x + (-1/12*z^4 - 1/2*z), x +
  (1/12*z^4 - 1/2*z), x + z]]]
-Total time spent: 1411
+Total time spent: 1733
