@@ -11,6 +11,7 @@ do(x^4+884*x^3-1972*x^2-884*x+1)
 do(x^4-42*x^2+144)
 do(x^12-30*x^8-370*x^6+1665*x^4+23166*x^2+81)
 do(x^24+3*x^22+22*x^20+31*x^18+138*x^16+85*x^14+297*x^12+149*x^10+249*x^8+238*x^6+98*x^4+16*x^2+1)
+do(x^36-9*x^35+39*x^34-117*x^33+309*x^32-744*x^31+1509*x^30-2736*x^29+5118*x^28-9930*x^27+17586*x^26-25014*x^25+28269*x^24-33297*x^23+56064*x^22-99678*x^21+130920*x^20-101487*x^19+10906*x^18+79494*x^17-112527*x^16+97506*x^15-83133*x^14+86349*x^13-101097*x^12+104667*x^11-58137*x^10-23812*x^9+94116*x^8-115215*x^7+79920*x^6-27150*x^5-8715*x^4+13350*x^3-2400*x^2-1200*x+400)
 do(x^54+4288*x^45+4739337*x^36+88723254*x^27+799530047*x^18-256778413*x^9+40353607)
 do(x^54-3762*x^52+6515505*x^50-6911246832*x^48+5039176931676*x^46-2686817670557400*x^44+1087963170065343636*x^42-342933852097598081616*x^40+85549691240003522127726*x^38-17077123231759966515087980*x^36+2746482620444718167893994910*x^34-357137314570021313085512898384*x^32+37572202145621696209178550611604*x^30-3191423993701636005506286262264824*x^28+217847326568033953619436917061987732*x^26-11861321463900503282422713802261870896*x^24+509777643921195165950639871535287639897*x^22-17055767879920589218196924743211626177266*x^20+436388466866294213576027352329957260889977*x^18-8349444825290714596926947944336750514846016*x^16+116184424651196907257566920202449108391711560*x^14-1136293058944245287715303626629567362322332192*x^12+7487695030927212135931358829137467901174408592*x^10-31501276144455609227993784616018089442301260032*x^8+78778033600362485611603755865500353002845187584*x^6-106406869975806738331854667483688298979911757824*x^4+68731119007852853614250618123508690506961555456*x^2-15696850241826982459503429282145309404169764864)
 do(x^64-3645070*x^56+3769245010705*x^48+120173739648338450*x^40+2124098086173949323364*x^32+16674620185061962554229010*x^24+87774696936415565369888312017*x^16+56323712629998864272734706*x^8+78032457926322172553281)
