@@ -14,6 +14,7 @@ test(32,4)
 test(32,13)
 test(32,30)
 test(32,32)
+test(36,9)
 test(42,2)
 test(48,12)
 test(64,3)
